add py script, update ignore

--- a/Lab1/DLP_lab1_report/report.tex
+++ b/Lab1/DLP_lab1_report/report.tex
@@ -24,7 +24,7 @@
 
 \section{Introduction} \label{sec:intro}
 In this lab, we are assigned to implement a neural network with two hidden layers, while some firmwares such as Tensorflow, Pytorch, are not allowed to used. We are given two datasets to do the classification work, both with 2-channel input and 2 classes, either 0 or 1. One dataset is linear separable, i.e., we can find a line in ${\mathbb{R}}^2$ that separate two groups perfectly. The other dataset, which we called it \textbf{XOR Dataset}, doesnot have the feature, and hence we cannot find such line to separate the data. \\
-Nevertheless, we still can use our model to predict the class of the given data with the power of neural network. First, we have to design our model, initialize the weights of it arbitrarily, and define the loss function to measure how good of our model is. Second, we throw the data into the model, get the prediction result and the loss. With these information, we can compute the gradient of the loss surfacewith respect to all weights in the model and update the weight by the method called \textbf{gradient descent}. The process will continue until the result is acceptable.
+Nevertheless, we still can use our model to predict the class of the given data with the power of neural network. First, we have to design our model, initialize the weights of it arbitrarily, and define the loss function to measure how good of our model is. Second, we throw the data into the model, get the prediction result and the loss. With these information, we can compute the gradient of the loss surface with respect to all weights in the model and update the weight by the method called \textbf{gradient descent}. The process will continue until the result is acceptable. \\
 The reminder of this report is organized as below. In Section~\ref{sec:exp} we detaily describe our methods, Section~\ref{sec:res} illustrate the result of testing, and some discussions are proposed in Section~\ref{sec:discuss}.
 \section{Experiment Setups} \label{sec:exp}
 \subsection{Sigmoid functions}
@@ -141,7 +141,7 @@ With the same network archietecture and the same hyperparameters, different weig
 \section{Discussion} \label{sec:discuss}
  
 \paragraph{Matrix Expression of Gradient}
-In Equation~\ref{eq: L_to_W1}, Equation~\ref{eq: L_to_W2} and Equation~\ref{eq: L_to_W3}, we show the gradients of each element to the loss function, which is complicated and hard to scale up, imaging that now we have a input layer with 100-channel input and 100-channel output, then we have to compute 10000 equations! Scalar computation not only conplicated but also computation heavily compare to matrix computation. Since not familiar with matrix calculus, I met dimension error when do matrix dot product. I chose scalar computation after I couldnot find any solution.
+In Equation~\ref{eq: L_to_W1}, Equation~\ref{eq: L_to_W2} and Equation~\ref{eq: L_to_W3}, we show the gradients of each element to the loss function, which is complicated and hard to scale up, imaging that now we have a input layer with 100-channel input and 100-channel output, then we have to compute 10000 equations! Scalar computation not only complicated but also computation heavily compare to matrix computation. Since not familiar with matrix calculus, I met dimension error when do matrix dot product. I chose scalar computation after I couldnot find any solution.
 \paragraph{Will Add Bias Term Enhance the Model?}
 Since the dataset is pretty easy to train, whether or not add bias term seems not effect the power of the model. For more complex dataset, the absence of bias may affect the performance of the model. Fortunately, we can choose whether to add bias in the fully connected layer in firmware like Pytorch, make us easier to observe the differences.
 
