finish lab2 and init lab3

--- a/Lab1/lab1.ipynb
+++ b/Lab1/lab1.ipynb
@@ -514,7 +514,7 @@
     }
    ],
    "source": [
-    "show_result(x_train, y_train, forward(x_train, W_s))"
+    "4show_result(x_train, y_train, forward(x_train, W_s))"
    ]
   },
   {
@@ -561,36 +561,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.06325],\n",
-       "       [0.98774],\n",
-       "       [0.00082],\n",
-       "       [0.98774],\n",
-       "       [0.00001],\n",
-       "       [0.98785],\n",
+       "array([[0.03231],\n",
+       "       [0.99923],\n",
+       "       [0.00019],\n",
+       "       [0.99923],\n",
        "       [0.     ],\n",
-       "       [0.99011],\n",
+       "       [0.99923],\n",
        "       [0.     ],\n",
-       "       [0.99798],\n",
+       "       [0.99918],\n",
+       "       [0.     ],\n",
+       "       [0.99477],\n",
        "       [0.     ],\n",
        "       [0.     ],\n",
-       "       [0.98836],\n",
+       "       [0.99918],\n",
        "       [0.     ],\n",
-       "       [0.99806],\n",
-       "       [0.00001],\n",
-       "       [0.9982 ],\n",
-       "       [0.00009],\n",
-       "       [0.9982 ],\n",
-       "       [0.00114],\n",
-       "       [0.9982 ]])"
+       "       [0.99463],\n",
+       "       [0.     ],\n",
+       "       [0.9936 ],\n",
+       "       [0.00002],\n",
+       "       [0.99356],\n",
+       "       [0.00048],\n",
+       "       [0.99356]])"
       ]
      },
-     "execution_count": 764,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,19 +602,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([[ 4.39060797, -9.82672791],\n",
-       "        [-3.4178775 ,  9.12361504]]), array([[-5.00895229,  5.97140126],\n",
-       "        [ 7.74337368, -9.06460215]]), array([[ 10.96421869],\n",
-       "        [-12.25795282]])]"
+       "[array([[ -8.50578,  11.23117],\n",
+       "        [  8.43627, -11.19686]]), array([[-9.17759, 10.08074],\n",
+       "        [ 8.77453, -9.6144 ]]), array([[-13.34526],\n",
+       "        [ 14.89144]])]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,19 +625,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([[ 16.51410855,  21.09346218],\n",
-       "        [-19.16649964, -24.7028017 ]]), array([[-10.45229806,  12.19700186],\n",
-       "        [ 12.12106091,   4.19280672]]), array([[ 58.63085194],\n",
-       "        [-44.29382953]])]"
+       "[array([[ 16.51411,  21.09346],\n",
+       "        [-19.1665 , -24.7028 ]]), array([[-10.4523 ,  12.197  ],\n",
+       "        [ 12.12106,   4.19281]]), array([[ 58.63085],\n",
+       "        [-44.29383]])]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,6 +645,13 @@
    "source": [
     "W_xor"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
